@@ -7,128 +7,223 @@ import pytest
 
 import __builtin__
 import base64
+import collections
 import copy
 import json
 
+Column = collections.namedtuple("Column", ["name", "type", "values", "expected", "complex"])
 
-ROWS = [
-    {
-        "string32_column": "abcdefghij",
-        "yson32_column": [110, "xxx", {"foo": "bar"}],
-        "int64_column": -42,
-        "uint64_column": yson.YsonUint64(25),
-        "double_column": 3.14,
-        "boolean_column": True,
-        "optional_list_int64_column": [11, 12, 13],
-        "variant_tuple_column": [0, "bar"],
-        "struct_column": {"a": False, "b": yson.YsonUint64(1), "c": "flame", "d": yson.YsonEntity()},
-        "non_utf_string_column": b"\xFF\xFE\xFD\xFC",
-        "list_optional_int64_column": [21, 22, 23],
-    },
-    {
-        "string32_column": "abcd",
-        "yson32_column": {"f": "b"},
-        "int64_column": -42,
-        "uint64_column": yson.YsonUint64(25),
-        "double_column": 3.14,
-        "boolean_column": True,
-        "optional_list_int64_column": yson.YsonEntity(),
-        "variant_tuple_column": [1, [7, 8]],
-        "struct_column": {"a": True, "b": yson.YsonUint64(12), "c": "quite long string", "d": [yson.YsonEntity()]},
-        "non_utf_string_column": b"ab\xFAcd",
-        "list_optional_int64_column": [100, yson.YsonEntity(), 200],
-    }
-]
-
-SCHEMA_BASE = [
-    {
-        "name": "string32_column",
-        "type": "string",
-    },
-    {
-        "name": "yson32_column",
-        "type": "any",
-    },
-    {
-        "name": "int64_column",
-        "type": "int64",
-    },
-    {
-        "name": "uint64_column",
-        "type": "uint64",
-    },
-    {
-        "name": "double_column",
-        "type": "double",
-    },
-    {
-        "name": "boolean_column",
-        "type": "boolean",
-    },
-    {
-        "name": "optional_list_int64_column",
-        "type_v2": {
-            "metatype": "optional",
-            "element": {
-                "metatype": "list",
-                "element": "int64"
-            }
-        }
-    },
-    {
-        "name": "variant_tuple_column",
-        "type_v2": {
-            "metatype": "variant_tuple",
-            "elements": [
-                "string",
-                {
-                    "metatype": "list",
-                    "element": "int8"
-                },
-            ]
-        }
-    },
-    {
-        "name": "struct_column",
-        "type_v2": {
-            "metatype": "struct",
-            "fields": [
-                {
-                    "name": "a",
-                    "type": "boolean"
-                },
-                {
-                    "name": "b",
-                    "type": "uint64"
-                },
-                {
-                    "name": "c",
-                    "type": "string"
-                },
-                {
-                    "name": "d",
-                    "type": {
-                        "metatype": "optional",
-                        "element": "null"
-                    }
-                },
-            ]
-        }
-    },
-    {
-        "name": "non_utf_string_column",
-        "type": "string"
-    },
-    {
-        "name": "list_optional_int64_column",
-        "type_v2" : {
-            "metatype": "list",
-            "element": {
-                "metatype": "optional",
-                "element": "int64"
-            }
-        }
-    },
+COLUMN_LIST = [
+    Column(
+        "string32_column",
+        optional_type("string"),
+        [
+            "abcdefghij",
+            "abcd",
+        ],
+        [
+            {
+                "$incomplete": True,
+                "$type": "string",
+                "$value": "abcdefg"
+            },
+            {
+                "$type": "string",
+                "$value": "abcd"
+            },
+        ],
+        False),
+    Column(
+        "yson32_column",
+        optional_type("any"),
+        [
+            [110, "xxx", {"foo": "bar"}],
+            {"f": "b"},
+        ],
+        [
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+        ],
+        False),
+    Column(
+        "int64_column",
+        optional_type("int64"),
+        [
+            -42,
+            -42,
+        ],
+        [
+            {
+                "$type": "int64",
+                "$value": "-42"
+            },
+            {
+                "$type": "int64",
+                "$value": "-42"
+            },
+        ],
+        False),
+    Column(
+        "uint64_column",
+        optional_type("uint64"),
+        [
+            yson.YsonUint64(25),
+            yson.YsonUint64(25),
+        ],
+        [
+            {
+                "$type": "uint64",
+                "$value": "25"
+            },
+            {
+                "$type": "uint64",
+                "$value": "25"
+            },
+        ],
+        False),
+    Column(
+        "double_column",
+        optional_type("double"),
+        [
+            3.14,
+            3.14,
+        ],
+        [
+            {
+                "$type": "double",
+                "$value": "3.14"
+            },
+            {
+                "$type": "double",
+                "$value": "3.14"
+            },
+        ],
+        False),
+    Column(
+        "boolean_column",
+        optional_type("boolean"),
+        [
+            True,
+            True,
+        ],
+        [
+            {
+                "$type": "boolean",
+                "$value": "true"
+            },
+            {
+                "$type": "boolean",
+                "$value": "true"
+            },
+        ],
+        False),
+    Column(
+        "non_utf_string_column",
+        optional_type("string"),
+        [
+            b"\xFF\xFE\xFD\xFC",
+            b"ab\xFAcd",
+        ],
+        [
+            {
+                "$type": "string",
+                "$value": u"\xFF\xFE\xFD\xFC"
+            },
+            {
+                "$type": "string",
+                "$value": u"ab\xFAcd"
+            },
+        ],
+        False),
+    Column(
+        "optional_list_int64_column",
+        optional_type(list_type("int64")),
+        [
+            [11, 12, 13],
+            yson.YsonEntity(),
+        ],
+        [
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+            yson.YsonEntity(),
+        ],
+        True),
+    Column(
+        "variant_tuple_column",
+        variant_tuple_type(["string", list_type("int8")]),
+        [
+            [0, "bar"],
+            [1, [7, 8]],
+        ],
+        [
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+        ],
+        True),
+    Column(
+        "struct_column",
+        struct_type([
+            ("a", "boolean"),
+            ("b", "uint64"),
+            ("c", "string"),
+            ("d", optional_type("null")),
+        ]),
+        [
+            {"a": False, "b": yson.YsonUint64(1), "c": "flame", "d": yson.YsonEntity()},
+            {"a": True, "b": yson.YsonUint64(12), "c": "quite long string", "d": [yson.YsonEntity()]},
+        ],
+        [
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+            {
+                "$incomplete": True,
+                "$type": "any",
+                "$value": ""
+            },
+        ],
+        True),
+    Column(
+        "list_optional_int64_column",
+        list_type(optional_type("int64")),
+        [
+            [21, 22, 23],
+            [100, yson.YsonEntity(), 200],
+        ],
+        [
+            {
+                "$type": "any",
+                "$value": "",
+                "$incomplete": True,
+            },
+            {
+                "$type": "any",
+                "$value": "",
+                "$incomplete": True,
+            },
+        ],
+        True),
 ]
 
 DYNAMIC_ORDERED_TABLE_SYSTEM_COLUMN_NAMES = [
@@ -136,111 +231,6 @@ DYNAMIC_ORDERED_TABLE_SYSTEM_COLUMN_NAMES = [
     "$tablet_index",
 ]
 
-EXPECTED_OUTPUT_BASE = {
-    "rows": [
-        {
-            "string32_column": {
-                "$incomplete": True,
-                "$type": "string",
-                "$value": "abcdefg"
-            },
-            "yson32_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "int64_column": {
-                "$type": "int64",
-                "$value": "-42"
-            },
-            "uint64_column": {
-                "$type": "uint64",
-                "$value": "25"
-            },
-            "double_column": {
-                "$type": "double",
-                "$value": "3.14"
-            },
-            "boolean_column": {
-                "$type": "boolean",
-                "$value": "true"
-            },
-            "optional_list_int64_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "variant_tuple_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "struct_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "non_utf_string_column": {
-                "$type": "string",
-                "$value": u"\xFF\xFE\xFD\xFC"
-            },
-            "list_optional_int64_column": {
-                "$type": "any",
-                "$value": "",
-                "$incomplete": True,
-            },
-        },
-        {
-            "string32_column": {
-                "$type": "string",
-                "$value": "abcd"
-            },
-            "yson32_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "int64_column": {
-                "$type": "int64",
-                "$value": "-42"
-            },
-            "uint64_column": {
-                "$type": "uint64",
-                "$value": "25"
-            },
-            "double_column": {
-                "$type": "double",
-                "$value": "3.14"
-            },
-            "boolean_column": {
-                "$type": "boolean",
-                "$value": "true"
-            },
-            "optional_list_int64_column": yson.YsonEntity(),
-            "variant_tuple_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "struct_column": {
-                "$incomplete": True,
-                "$type": "any",
-                "$value": ""
-            },
-            "non_utf_string_column": {
-                "$type": "string",
-                "$value": u"ab\xFAcd"
-            },
-            "list_optional_int64_column": {
-                "$type": "any",
-                "$value": "",
-                "$incomplete": True,
-            },
-        },
-    ],
-    "incomplete_columns": "false",
-    "incomplete_all_column_names": "false"
-}
 
 FIELD_WEIGHT_LIMIT = 20
 STRING_WEIGHT_LIMIT = 5
@@ -360,26 +350,55 @@ def get_output_yql_rows():
 
 TABLE_PATH = "//tmp/table"
 
-
-def get_column_names(dynamic_ordered):
-    result = list(__builtin__.map(lambda c: c["name"], SCHEMA_BASE))
-    if dynamic_ordered:
+def get_column_names(dynamic=False, ordered=False):
+    result = [c["name"] for c in get_schema(dynamic)]
+    if dynamic and ordered:
         result += DYNAMIC_ORDERED_TABLE_SYSTEM_COLUMN_NAMES
     return result
 
-def get_schema(**kwargs):
-    kwargs.setdefault("key_column_names", [])
-    key_column_names = kwargs.pop("key_column_names")
+def get_rows(dynamic=False):
+    res = [{}, {}]
+    for column in COLUMN_LIST:
+        if dynamic and column.complex:
+            continue
+        for i in xrange(2):
+            res[i][column.name] = column.values[i]
+    return res
 
-    schema_base = copy.deepcopy(SCHEMA_BASE)
-    for column in schema_base:
-        if column["name"] in key_column_names:
-            column["sort_order"] = "ascending"
+def get_expected_output(dynamic=False, ordered=False):
+    rows = [{}, {}]
+    for column in COLUMN_LIST:
+        if dynamic and column.complex:
+            continue
+        for i in xrange(2):
+            rows[i][column.name] = column.expected[i]
 
-    return make_schema(schema_base, **kwargs)
+    return {
+        "rows": rows,
+        "incomplete_columns": "false",
+        "all_column_names": get_expected_all_column_names(dynamic, ordered),
+        "incomplete_all_column_names": "false"
+    }
 
-def get_expected_all_column_names(dynamic_ordered):
-    result = get_column_names(dynamic_ordered)
+
+def get_schema(dynamic=False, key_column_names=(), **kwargs):
+    schema = []
+    for column in COLUMN_LIST:
+        if dynamic and column.complex:
+            continue
+
+        column_schema = {
+            "name": column.name,
+            "type_v2": column.type,
+        }
+
+        if column.name in key_column_names:
+            column_schema["sort_order"] = "ascending"
+        schema.append(column_schema)
+    return make_schema(schema, **kwargs)
+
+def get_expected_all_column_names(dynamic=False, ordered=False):
+    result = get_column_names(dynamic, ordered)
     result.sort()
     return result
 
@@ -428,17 +447,16 @@ class TestWebJsonFormat(YTEnvSetup):
     @unix_only
     def test_read_table(self):
         create("table", TABLE_PATH)
-        write_table(TABLE_PATH, ROWS)
+        write_table(TABLE_PATH, get_rows())
 
-        column_names = get_column_names(dynamic_ordered=False)
+        column_names = get_column_names()
         assert len(column_names) > 0
 
         # Do not slice columns.
         format_ = get_web_json_format(7, len(column_names))
         output = json.loads(read_table(TABLE_PATH, output_format=format_))
 
-        expected_output = copy.deepcopy(EXPECTED_OUTPUT_BASE)
-        expected_output["all_column_names"] = get_expected_all_column_names(dynamic_ordered=False)
+        expected_output = get_expected_output()
         assert output == expected_output
 
         # Slice columns.
@@ -456,7 +474,7 @@ class TestWebJsonFormat(YTEnvSetup):
 
         missed_schema_column = "int64_column"
 
-        rows = copy.deepcopy(ROWS)
+        rows = get_rows()
         for row in rows:
             row.pop(missed_schema_column)
         write_table(TABLE_PATH, rows)
@@ -472,20 +490,19 @@ class TestWebJsonFormat(YTEnvSetup):
     @unix_only
     def test_select_rows_from_sorted_dynamic_table(self):
         sync_create_cells(1)
-        schema = get_schema(key_column_names=["string32_column"], unique_keys=True, strict=True)
+        schema = get_schema(dynamic=True, key_column_names=["string32_column"], unique_keys=True, strict=True)
         create("table", TABLE_PATH, attributes={"schema": schema, "dynamic": True})
         sync_mount_table(TABLE_PATH)
 
-        insert_rows(TABLE_PATH, ROWS)
+        insert_rows(TABLE_PATH, get_rows(dynamic=True))
 
-        column_names = get_column_names(dynamic_ordered=False)
+        column_names = get_column_names(dynamic=True)
 
         format_ = get_web_json_format(7, len(column_names))
         query = get_dynamic_table_select_query(column_names, TABLE_PATH)
         output = json.loads(select_rows(query, output_format=format_))
 
-        expected_output = copy.deepcopy(EXPECTED_OUTPUT_BASE)
-        expected_output["all_column_names"] = get_expected_all_column_names(dynamic_ordered=False)
+        expected_output = get_expected_output(dynamic=True)
         expected_output["rows"].sort(key=lambda c: c["string32_column"]["$value"])
         assert output == expected_output
 
@@ -495,13 +512,13 @@ class TestWebJsonFormat(YTEnvSetup):
     @unix_only
     def test_select_rows_from_sorted_dynamic_table_with_duplicate_columns(self):
         sync_create_cells(1)
-        schema = get_schema(key_column_names=["string32_column"], unique_keys=True, strict=True)
+        schema = get_schema(dynamic=True, key_column_names=["string32_column"], unique_keys=True, strict=True)
         create("table", TABLE_PATH, attributes={"schema": schema, "dynamic": True})
         sync_mount_table(TABLE_PATH)
 
-        insert_rows(TABLE_PATH, ROWS)
+        insert_rows(TABLE_PATH, get_rows(dynamic=True))
 
-        column_names = get_column_names(dynamic_ordered=False) * 2
+        column_names = get_column_names() * 2
 
         format_ = get_web_json_format(7, len(column_names))
         query = get_dynamic_table_select_query(column_names, TABLE_PATH)
@@ -514,10 +531,10 @@ class TestWebJsonFormat(YTEnvSetup):
     @unix_only
     def test_select_rows_from_ordered_dynamic_table(self):
         sync_create_cells(1)
-        schema = get_schema(strict=True)
+        schema = get_schema(dynamic=True)
         create("table", TABLE_PATH, attributes={"schema": schema, "dynamic": True})
 
-        rows = copy.deepcopy(ROWS)
+        rows = get_rows(True)
         for i in range(len(rows)):
             rows[i]["$tablet_index"] = i
         reshard_table(TABLE_PATH, len(rows))
@@ -526,13 +543,13 @@ class TestWebJsonFormat(YTEnvSetup):
 
         insert_rows(TABLE_PATH, rows)
 
-        column_names = get_column_names(dynamic_ordered=True)
+        column_names = get_column_names(dynamic=True, ordered=True)
 
         format_ = get_web_json_format(7, len(column_names))
         query = get_dynamic_table_select_query(column_names, TABLE_PATH)
         output = json.loads(select_rows(query, output_format=format_))
 
-        expected_output = copy.deepcopy(EXPECTED_OUTPUT_BASE)
+        expected_output = get_expected_output(True, ordered=True)
         for i in range(len(rows)):
             expected_output["rows"][i]["$$tablet_index"] = {
                 "$type": "int64",
@@ -542,7 +559,6 @@ class TestWebJsonFormat(YTEnvSetup):
                 "$type": "int64",
                 "$value": "0"
             }
-        expected_output["all_column_names"] = get_expected_all_column_names(dynamic_ordered=True)
         output["rows"].sort(key=lambda column: (column["$$tablet_index"], column["$$row_index"]))
         assert output == expected_output
 
@@ -553,9 +569,9 @@ class TestWebJsonFormat(YTEnvSetup):
     def test_yql_value_formats(self, value_format):
         schema = get_schema(strict=True)
         create("table", TABLE_PATH, attributes={"schema": schema})
-        write_table(TABLE_PATH, ROWS)
+        write_table(TABLE_PATH, get_rows())
 
-        column_names = get_column_names(dynamic_ordered=False)
+        column_names = get_column_names()
         assert len(column_names) > 0
 
         format_ = get_web_json_format(
@@ -576,4 +592,4 @@ class TestWebJsonFormat(YTEnvSetup):
 
         assert not output["incomplete_columns"]
         assert not output["incomplete_all_column_names"]
-        assert output["all_column_names"] == get_expected_all_column_names(dynamic_ordered=False)
+        assert output["all_column_names"] == get_expected_all_column_names()
